# siteinspector-code

./: agent_definitions.py  database.py  engineroom.db  engineroom.db-shm  engineroom.db-wal  prompts.py  pyproject.toml  tools.py
routes/: api_routes.py  main_routes.py  page_routes.py  project_routes.py  site_routes.py  terrain_routes.py
services/: base_service.py  chat_service.py  gradient_service.py  terrain_service.py
static/: app.js  styles.css
static/css/: dashboard.css
static/js/: dashboard-modal.js  floorplan-manager.js  site-inspector-modular.js  site-selector.js
static/js/site-inspector/: debug-helper.js  map-features-manager.js  property-setbacks-manager.js  site-boundary-manager.js  site-inspector-core.js  ui-panel-manager.js
templates/: index.html  project_overview.html  site_inspector.html  site_selector.html  structure_designer.html  terrain_viewer.html
utils/: logger.py
